# gps-trajectory-analysis

./: docker-compose.yml  pyproject.toml
data/outputs/: cleaned_trajectories.json  moves.json  stops.json
data/part1/: Activity_self_report.csv  GPS_log.csv
