[project]
name = "project-mobility"
version = "0.1.0"
description = "GPS trajectory analysis using MovingPandas and PostGIS"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "geopandas>=0.14.0",
    "shapely>=2.0.0",
    "movingpandas>=0.18.0",
    "hvplot>=0.9.0",
    "matplotlib>=3.8.0",
    "folium>=0.15.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "pyproj>=3.6.0",
    "rtree>=1.2.0",
    "jupyterlab>=4.0.0",
    "geoviews>=1.15.1",
    "mapclassify>=2.8.1",
    "stonesoup>=1.8",
]
